change key path
Signed-off-by: YanxuanLiu <yanxuanl@nvidia.com>

--- a/.github/workflows/mvn-verify-check.yml
+++ b/.github/workflows/mvn-verify-check.yml
@@ -121,7 +121,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
@@ -174,7 +174,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
@@ -236,7 +236,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
@@ -290,7 +290,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
