change verify to package for if_modified_files
Signed-off-by: Yanxuan Liu <yanxuanl@nvidia.com>

--- a/scala2.13/tools/pom.xml
+++ b/scala2.13/tools/pom.xml
@@ -62,7 +62,7 @@
                         <executions>
                             <execution>
                                 <id>if_modified_files</id>
-                                <phase>verify</phase>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>exec</goal>
                                 </goals>
