--- a/.github/workflows/license-header-check.yml
+++ b/.github/workflows/license-header-check.yml
@@ -33,8 +33,16 @@ jobs:
         with:
           fetch-depth: ${{ env.PR_FETCH_DEPTH }}
 
+      - name: show vars
+        run: |
+          echo "触发 PR 编号: ${{ github.event.number }}"
+          echo "源分支: ${{ github.event.pull_request.head.ref }}"
+          echo "目标分支: ${{ github.event.pull_request.base.ref }}"
+          echo "是否为 Fork: ${{ github.event.pull_request.head.repo.fork }}"
+          echo "源仓库: ${{ github.event.pull_request.head.repo.full_name }}"
+
       - name: license-header-check
-        uses: NVIDIA/spark-rapids-common/license-header-check@main
+        uses: YanxuanLiu/spark-rapids-common/license-header-check@header-check-merge-to-main
         with:
           included_file_patterns: |
             *.yml,
