--- a/.github/workflows/pr-desc-check.yml
+++ b/.github/workflows/pr-desc-check.yml
@@ -22,7 +22,13 @@ on:
 jobs:
   pr-description-check:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: read
+      statuses: write
+      contents: read  
     if: "!contains(github.event.pull_request.title, '[bot]')"
     steps:
       - name: pr-desciption-check
         uses: YanxuanLiu/spark-rapids-common/pr-description-check@pr-desc-check
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
